<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Modify Expense Tracker</string>

    <string name="menu_login">Sign Out</string>
    <string name="menu_signup">Sign Up</string>
    <string name="menu_app_settings">Modify Expense Tracker</string>
    <string name="menu_expenses">View Transactions</string>
    <string name="menu_reports">Generate Reports</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="add_edit_expense_btn">Add / Edit Daily Expense</string>
    <string name="add_edit_expense_item_btn">Add / Edit Expense Category</string>
    <string name="add_edit_monthly_income_btn">Add / Edit Monthly Income</string>

    <string name="text_color">#B4AB8E</string>
    <string name="expense_category">Edit Categories / Add Category</string>
    <string name="edit_category">Enter Category to be Edited</string>
    <string name="original_category">Category to be Edited</string>
    <string name="new_category">Enter New Category Name</string>
    <string name="submit_button">Submit</string>
    <string name="enter_new_category">Enter Name for New Category to be Added</string>
    <string name="re_enter_category">Re-Enter New Category Name</string>
    <string name="edit_daily_expense">Add / Edit Daily Expense</string>
    <string name="enter_expense_amount">Enter New Expense Amount</string>

    <string name="monthly_income">Add / Edit Monthly Income</string>
    <string name="monthly_income_amount">Enter Monthly Income Amount</string>
    <string name="reports">Reports</string>
    <string name="project_title">Expense Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
