<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_app_settings" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_expenses" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_menu_send"
            android:title="Change Password" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/menu_send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
