<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context="fragments.MonthlyIncome">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/monthly_income"
        android:textSize="24sp"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/current_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/monthlyIncomeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/monthly_income_amount"
        android:inputType="numberDecimal"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"/>

    <Button
        android:id="@+id/submit_monthly_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/button_shape"
        android:text="@string/submit_button"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthlyIncomeEditText" />

</LinearLayout>